@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@
  * @bug 8007458
  * @summary Tests CardLayout encoding
  * @modules java.desktop/java.awt:open
- * @run main/othervm -Djava.security.manager=allow java_awt_CardLayout
+ * @run main/othervm java_awt_CardLayout
  * @author Sergey Malenkov
  */
 
@@ -41,7 +41,7 @@ public final class java_awt_CardLayout extends AbstractTest<CardLayout> {
     private static final Field COMP = getField("java.awt.CardLayout$Card.comp");
 
     public static void main(String[] args) throws Exception {
-        new java_awt_CardLayout().test(true);
+        new java_awt_CardLayout().test();
     }
 
     @Override
